<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">InventoryManager</string>
    <!-- Labels for inc/dec product quantity in EditorActivity -->
    <string name="editor_activity_increase">+</string>
    <string name="editor_activity_decrease">-</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Title for the empty product list view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No products in your inventory.</string>

    <!-- Subtitle for the empty product list view [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Why don\'t you add some?</string>

    <!-- Label for the overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for the overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Label for the overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for the name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for the price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for the quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Label for the supplier category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <!-- Text hint for the supplier phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Phone</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message when user is deleting a product entry [CHAR LIMIT=NONE] -->
    <string name="msg_delete_product_entry">Are you sure you want to delete this product?</string>

    <!-- Dialog button text for the option to confirm product deletion [CHAR LIMIT=20] -->
    <string name="delete_yes">Yes</string>

    <!-- Dialog button text for the option to cancel product deletion [CHAR LIMIT=20] -->
    <string name="delete_no">No</string>

    <!-- Confirmation message after a product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="msg_delete_product_success">Product deleted successfully</string>

    <!-- Error message after failing to delete a product [CHAR LIMIT=NONE] -->
    <string name="msg_delete_product_failed">Failed to delete product</string>

    <!-- Confirmation message after user cancelled product deletion.[CHAR LIMIT=NONE] -->
    <string name="msg_delete_product_cancelled">User cancelled product deletion.</string>

    <!-- Confirmation message after a product was successfully sold [CHAR LIMIT=NONE] -->
    <string name="msg_sell_product_success">Product sold</string>

    <!-- Error message after failing to sell a product [CHAR LIMIT=NONE] -->
    <string name="msg_sell_product_failed">Failed to sell product</string>

    <!-- Call supplier no-number error message [CHAR LIMIT=NONE] -->
    <string name="msg_no_supplier_phone">Set a phone number for your supplier</string>

    <!-- Placeholder string for displaying the product price in CatalogActivity [CHAR LIMIT=NONE] -->
    <string name="product_item_price">Price: $<xliff:g id="price">%.2f</xliff:g> </string>

    <!-- Placeholder string for displaying the product quantity in CatalogActivity [CHAR LIMIT=NONE] -->
    <string name="product_item_quantity"><xliff:g id="quantity">%d</xliff:g> in stock</string>

    <!-- Error message for invalid input data for new product [CHAR LIMIT=NONE] -->
    <string name="invalid_user_input">Invalid user input: </string>

    <!-- Error messages for various invalid user inputs [CHAR-LIMIT=NONE] -->
    <string name="invalid_product_id">Product ID must be a positive integer. Got: <xliff:g id="id">%d</xliff:g></string>
    <string name="invalid_product_name">Product name must not be empty.</string>
    <string name="invalid_product_price">Product price must be a positive decimal value. Got: <xliff:g id="price">%.2f</xliff:g></string>
    <string name="invalid_product_price_empty">Product price must be provided.</string>
    <string name="invalid_product_quantity">Product quantity must be a positive integer value. Got: <xliff:g id="quantity">%d</xliff:g></string>
    <string name="invalid_product_quantity_empty">Product quantity must be provided.</string>
    <string name="invalid_supplier_name">Supplier name must not be empty.</string>
    <string name="invalid_supplier_phone">Supplier phone must not be empty.</string>
</resources>
