<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor activity -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium">

            <!-- Overview category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_overview"
                    style="@style/CategoryStyle" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingStart="@dimen/xsmall"
                    android:paddingEnd="@dimen/xsmall"
                    android:orientation="vertical">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/product_name_edit_text"
                        android:hint="@string/hint_product_name"
                        android:inputType="textCapWords"
                        style="@style/EditorFieldStyle" />

                    <!-- Price field -->
                    <EditText
                        android:id="@+id/product_price_edit_text"
                        android:hint="@string/hint_product_price"
                        android:inputType="numberDecimal"
                        style="@style/EditorFieldStyle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- Quantity field -->
                        <EditText
                            android:id="@+id/product_quantity_edit_text"
                            android:hint="@string/hint_product_quantity"
                            android:inputType="numberDecimal"
                            style="@style/EditorFieldPriceStyle" />

                        <Button
                            android:id="@+id/product_quantity_decrease_button"
                            android:text="@string/editor_activity_decrease"
                            style="@style/ButtonPriceStyle" />

                        <Button
                            android:id="@+id/product_quantity_increase_button"
                            android:text="@string/editor_activity_increase"
                            style="@style/ButtonPriceStyle" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- Supplier category -->
            <LinearLayout
                android:id="@+id/container_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge"
                android:layout_marginBottom="@dimen/xxlarge"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_supplier"
                    style="@style/CategoryStyle" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/supplier_name_edit_text"
                        android:hint="@string/hint_supplier_name"
                        android:inputType="textCapWords"
                        style="@style/EditorFieldStyle" />

                    <!-- Price field -->
                    <EditText
                        android:id="@+id/supplier_phone_edit_text"
                        android:hint="@string/hint_supplier_phone"
                        android:inputType="phone"
                        style="@style/EditorFieldStyle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/call_supplier_button"
        style="@style/EditorButtonCallSupplier"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
